--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -16,6 +16,12 @@ body {
   margin-top: 70px;
 }
 
+#p :nth-child() {
+align-items: center;
+}
+
+header:nth-child(1)
+
 header{
   background-color: #242526;
   width: 100%;
@@ -179,7 +185,7 @@ label{
 }
 
 .home, .logout{
-  margin-top: 60px;
+  margin-top: 10px;
 }
 
 .btn_disabled{
@@ -376,7 +382,7 @@ a:hover{
 }
 
 .abc{
-  margin-top: 100px;
+  margin-top: 90px;
 }
 
 /* ----------------------- */
