--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark header">
+
       <a class="navbar-brand" href="http://localhost:3000/">Shop máy ảnh</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,7 +13,7 @@
           {{!-- <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li> --}}
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown kk">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
