--- a/src/resources/views/products/succeeded.hbs
+++ b/src/resources/views/products/succeeded.hbs
@@ -1,1 +1,5 @@
 <h1 class="mt-7">THANH TOÁN THÀNH CÔNG!!!</h1>
+<div align="center">
+    <a href="/"  class="btn btn-warning btn-md">&nbsp;Quay
+                        về trang chủ</a>
+</div>
