--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -13,7 +13,7 @@
           {{!-- <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li> --}}
-          <li class="nav-item dropdown kk">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
@@ -21,7 +21,7 @@
               {{!-- <a class="dropdown-item" href="/product/create">Thêm sản phẩm</a> --}}
               <a class="dropdown-item" href="/order">Lịch sử mua hàng</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="">Something else here</a>
             </div>
           </li>
           {{!-- <li class="nav-item">
