--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -11,6 +11,7 @@
                           data-toggle="dropdown" type="button" class="btn dropdown-toggle sort" fdprocessedid="6gvpc9">Mới nhất</button>
                         <ul role="menu" class="dropdown-menu sort_list">
                           <li role="presentation" class="ml-2"><a href="/">Mới nhất</a></li>
+                          <li role="presentation" class="ml-2"><a href="/sort_by/oldest" class="oldest">Cũ nhất</a></li>
                           <li role="presentation" class="ml-2"><a href="/sort_by/price-ascending" class="price-ascending">Giá tăng dần</a></li>
                           <li role="presentation" class="ml-2"><a href="/sort_by/price-descending" class="price-descending">Giá giảm dần</a></li>
                           <li role="presentation" class="ml-2"><a href="/sort_by/price-lower-20" class="price-lower-20">Dưới 20 triệu</a></li>
